--- a/prod/deploy.yaml
+++ b/prod/deploy.yaml
@@ -3,19 +3,19 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    app: lwweb
-  name: lwweb
+    app: myweb
+  name: myweb
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: lwweb
+      app: personalweb
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app: lwweb
+        app: myweb
     spec:
       containers:
       - image: vimal13/apache-webserver-php
