--- a/prod/deploy.yaml
+++ b/prod/deploy.yaml
@@ -9,7 +9,7 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: personalweb
+      app: myweb
   strategy: {}
   template:
     metadata:
